# PythonCraft

./: .gitattributes  .gitignore  06_interactive.py  12_hashing.py  14_FileHandling.py  16_divide_conquer.py  AlgoPractice.py  DataTypes.py  LICENSE  Python.pages  README.md  RandomNotes.py  design_patterns.py  media_conversion.py  pyproject.toml  pythoncraft.yaml  pythoncraft.yml  random_notes.py  stats.py
extras/: LeetEasy.py  LeetMedium.py  bit_questions.py  practice_medium.py
inputs/: integers.txt  textinput.txt
leetcode/: 0001.py  0007.py  0009--.py  0009.py  0013--.py  0013.py  0020.py  0021--.py  0021.py  0027.py  0066--.py  0066.py  0089.py  0121.py  0136.py  0216--.py  0217.py  0249--.py  0249.py  0344.py  0628.py  0692.py  README.md
scripts/: .01_syntax.py.swp  02_scalars.py  03_containers.py  07_classes.py  10_binary_trees.py  11_heaps_tries.py  13_graphs.py  18_dynamic_algo.py  20_testing.py  22_advanced.py  design_patterns.py  helper_scripts.py  practice_soft.py
topics/: object_oriented.py  search_algos.py  syntax.py
tutorial/: bit_ops.py  containers.py  design_patterns.py  divide_conquer.py  functions.py  graph_algos.py  greedy_algos.py  hashing.py  linked_lists.py  loops.py  scalars.py  sort_algos.py  syntax.py
